update exporter config

--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -57,6 +57,7 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
       - '--collector.textfile.directory=/home/'
+      - '--collector.meminfo_numa'
       - '--no-collector.ipvs'
     entrypoint:
        - /bin/sh
